--- a/css/style.css
+++ b/css/style.css
@@ -243,7 +243,7 @@ padding-bottom: 0;
     text-align: center;
     letter-spacing: 0.03em;
     color: var(--primary-color);
-    background-color: var(--white-color);
+    background-color: #F5F4FA;
     padding: 6px 22px;
     border-radius: 4px;
 }
@@ -254,7 +254,7 @@ padding-bottom: 0;
     background-color: var(--accent-color);
 }
 .button-item:not(:last-child) {
-    margin-right: 30px;
+    margin-right: 8px;
 }
 .button-list {
     display: flex;
