--- a/css/style.css
+++ b/css/style.css
@@ -129,7 +129,12 @@ h1 {
     justify-content: center;
     align-items: center;
     padding: 200px 0;
-    background-image:url(../images/imghero.jpg);
+    background-image: linear-gradient(
+            rgba(47, 48, 58, 0.4),
+            rgba(47, 48, 58, 0.4) 
+        ), 
+        url("../images/imghero.jpg");
+    background-size:cover;
 }
 .about-us-list {
     display: flex;
@@ -191,6 +196,13 @@ padding-bottom: 0;
     text-align: center;
     letter-spacing: 0.03em;
     color: var(--secondary-color);
+}
+.social-list-link {
+    display: block;
+    width: 44px;
+    height: 44px;
+    background-color: #FFFFFF;
+    border-radius: 50%;
 }
 .footer {
     background-color: var(--background-secondary-color);
