исправляет ошибки в позиционировании

--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .container {
     width: 1200px;
-    margin: 0 215px;
+    margin: 0 auto;
     padding: 0 15px;
 }
 .site-nav,
@@ -151,7 +151,7 @@ h1 {
         url("../images/imghero.jpg");
     background-size:cover;
     width: 1600px;
-    margin: 0;
+    margin: 0 auto;
 }
 .about-us-list {
     display: flex;
@@ -188,6 +188,9 @@ padding-bottom: 0;
 }
 .team-list {
     display: flex;
+    padding-top: 0;
+}
+.section-images {
     padding-top: 0;
 }
 .images {
@@ -259,7 +262,8 @@ padding-bottom: 0;
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 16px 32px;
+    width: 170px;
+    height: 92px;
 }
 .clients-link-item:not(:last-child) {
     margin-right: 30px;
@@ -272,19 +276,20 @@ padding-bottom: 0;
     background-color: var(--background-secondary-color);
     padding: 60px 0;
     width: 1600px;
-    margin: 0;
+    margin: 0 auto;
+}
+.footer-section {
     display: flex;
 }
-.container.footer-container {
+.footer-container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    align-items: baseline;
+    margin-right: 70px;
 }
 .footer-container-social-network {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    border: 1px;
 }
 .footer-social-list-link {
     display: flex;
@@ -311,6 +316,9 @@ padding-bottom: 0;
     color: var(--white-color);
     margin-bottom: 20px; 
 }
+.logo-footer-block {
+    margin-bottom: 20px;
+}
 .logo-footer {
     font-family: var(--secondary-font-family);
     font-weight: 700;
@@ -318,7 +326,6 @@ padding-bottom: 0;
     line-height: 1.19;
     letter-spacing: 0.03em;
     color: var(--accent-color);
-    margin-bottom: 20px;
     font-style: normal;
 }
 .logo-studio-footer {
@@ -360,6 +367,11 @@ padding-bottom: 0;
 
 .button:hover,
 .button:focus {
+    color: var(--white-color);
+    background-color: var(--accent-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+.all {
     color: var(--white-color);
     background-color: var(--accent-color);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
